Movie, User and Lists controllers, routers and tests
