# back-end/src/models/Movie.js
@@ -46,10 +46,6 @@ const movieSchema = new mongoose.Schema({
         type: [String],
         required: true
     },
-    director: {
-        type: [String],
-        required: true
-    },
     cast: {
         type: [String],
         required: true
